--- a/note/templates/note/list_note.html
+++ b/note/templates/note/list_note.html
@@ -14,7 +14,16 @@
         <td>修改</td>
         <td>删除</td>
     </tr>
-
+    {% for note in notes %}
+    <tr>
+        <th>{{ user.id }}</th>
+        <th>{{ note.title }}</th>
+        <th>{{ note.create_time }}</th>
+        <th>{{ note.update_time }}</th>
+        <th><a href="/note/mod/{{ uid }}">修改</a></th>
+        <th><a href="/note/del/{{ uid }}">删除</a></th>
+    </tr>
+    {% endfor %}
 </table>
 </body>
 </html>
