云笔记简单完成

--- a/index/templates/index/login_after.html
+++ b/index/templates/index/login_after.html
@@ -7,6 +7,6 @@
 <body>
 <p> 欢迎: {{ username }} <a href="/user/logout">退出登录</a></p>
 <!--此处为展示界面路径-->
-<p><a href="/">进入我的云笔记</a></p>
+<p><a href="/note">进入我的云笔记</a></p>
 </body>
 </html>
