--- a/note/templates/note/add_note.html
+++ b/note/templates/note/add_note.html
@@ -7,11 +7,12 @@
 <body>
 <form method="post" action="/note/add">
     <p>
-        标题:<input type="text" name="title">
+        主题:<input type="text" name="title">
         <input type="submit" value="保存">
+        <a href="/note">返回列表页</a>
     </p>
     <p>
-        <textarea name="content" cols="50" rows="10"></textarea>
+        <textarea name="content" cols="50" rows="20"></textarea>
     </p>
 </form>
 </body>
